--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h2>I'm a Web Developer</h2>
     <hr />
 
-    <h3>Movie Ranking Project</h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <h4>The Best Movies According to Vince</h4>
     <h5>My Top 3 Movies of all-time</h5>
     <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview" />
 
     <hr />
-    <h3>Birthday Invite Project</h3>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <h4>It's My Birthday!</h4>
     <h5>On the 30th of April</h5>
     
